--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <tbody>
                                   <tr>
                                     <td style="width: 320px;">সিটি কর্পোরেশন /পৌর /ইউনিয়ন ভূমি অফিসের নাম :</td>
-                                    <td class="dotted_botton">বালুয়া ইউনিয়ন ভূমি অফিস</td>
+                                    <td class="dotted_botton">খোড়াগাছ ইউনিয়ন ভূমি অফিস</td>
                                   </tr>
                                 </tbody>
                               </table>
